samples/_failures_safe/1761288122_9fd55a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5fb727cb.c: In function ‘main’:
./samples/SAFE/__tmp_5fb727cb.c:151:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  151 |     Matrix mat
      |     ^~~~~~
./samples/SAFE/__tmp_5fb727cb.c:151:5: error: expected declaration or statement at end of input
